@@ -6,6 +6,13 @@ Changes - Apache::Test change logfile
 
 =over 3
 
+=item 1.32 April 15, 2010
+
+Fix issue with recent feature where lack of libapreq resulted in test failure.
+[Philippe M. Chiasson]
+
+Added t_{start,read,finish}_file_watch to Apache::TestUtil [Torsten Foertsch]
+
 =item 1.31 February 24, 2010
 
 Modify need_cgi so that it looks for cgi.c instead of cgi.  This is a fix
